Bug 52289 - translatable string typo: "must not be have"
Summary: translatable string typo: "must not be have"
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: translation (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-16 23:15 UTC by Roland Stigge
Modified: 2014-02-08 09:33 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-11-19 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Stigge 2012-02-16 23:15:47 UTC
gcc/fortran/resolve.c:9234:

"Coindexed variable must not be have " ...

->

"must not have" (or "must not be"?)
Comment 1 Jeffrey A. Law 2014-02-07 17:53:32 UTC
Author: law
Date: Fri Feb  7 17:52:59 2014
New Revision: 207609

URL: http://gcc.gnu.org/viewcvs?rev=207609&root=gcc&view=rev
Log:
        PR translation/52289
        * fortran/resolve.c (resolve_ordinary_assign): Fix typoed word
        in an error message.

Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/resolve.c
Comment 2 Jeffrey A. Law 2014-02-07 17:53:53 UTC
Fixed on trunk.
Comment 3 Andreas Schwab 2014-02-08 09:33:56 UTC
Author: schwab
Date: Sat Feb  8 09:33:24 2014
New Revision: 207630

URL: http://gcc.gnu.org/viewcvs?rev=207630&root=gcc&view=rev
Log:
PR translation/52289
* gfortran.dg/coarray_8.f90: Update dg-error match.

Modified:
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gfortran.dg/coarray_8.f90