re PR translation/52289 (translatable string typo: "must not be have")

PR translation/52289
        * fortran/resolve.c (resolve_ordinary_assign): Fix typoed word
        in an error message.

From-SVN: r207609